Add searching for products
